[package]
name = "jwkrs"
description = "A JWK library."
version = "0.1.3"
authors = ["Martin Svensson <martin@appscifi.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/macthestack/jwkrs"

[dependencies]
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
jsonwebtoken = "7.2"
tokio = { version = "1" }
evmap = "10"
evmap-derive = "0.2"
