[package]
name = "jwkrs"
description = "A JWK library."
version = "0.2.0"
authors = ["Martin Svensson <martin@appscifi.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/macthestack/jwkrs"

[dependencies]
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
jsonwebtoken = "9"
tokio = { version = "1" }
evmap = "10"
evmap-derive = "0.2"
tracing = "0.1"
cache_control = "0.2"

[dev-dependencies]
wiremock = "0.6"
rsa = "0.9"
rand = "0.8"
base64 = "0.22"
chrono = "0.4"
serde_json = "1.0"
